lab-LinuxFoundation/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    ingress: ingressgateway  # Changed from istio: ingressgateway to match IstioOperator labels
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "httpbin.com"
