lab-LinuxFoundation/httpbin-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-vs
spec:
  hosts:
    - "httpbin.com"
  gateways:
    - ingress-gateway
  http:
    - route:
      - destination:
          host: httpbin.default.svc.cluster.local
          port:
            number: 8000
